--- a/layouts/shortcodes/contact-cards.html
+++ b/layouts/shortcodes/contact-cards.html
@@ -13,14 +13,14 @@
             <div class="col-12 text-center">
                 <h2 class="section__title text-white mb-3">{{ $title }}</h2>
                 {{ if $subtitle }}
-                <p class="lead text-white-50">{{ $subtitle }}</p>
+                <p class="lead">{{ $subtitle }}</p>
                 {{ end }}
             </div>
         </div>
         
         <div class="row g-4 justify-content-center">
             <!-- Email -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3">
                 <a href="mailto:lyndsaykarges@gmail.com" class="contact-card-link">
                     <div class="card h-100 contact-card text-center">
                         <div class="card-body py-4">
@@ -35,12 +35,12 @@
             </div>
             
             <!-- Phone -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3">
                 <a href="tel:+17804513083" class="contact-card-link">
                     <div class="card h-100 contact-card text-center">
                         <div class="card-body py-4">
                             <div class="contact-card-icon mx-auto mb-3">
-                                📞
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
                             </div>
                             <h5 class="contact-card-title">Phone</h5>
                             <p class="contact-card-text small mb-0">780-451-3083</p>
@@ -50,7 +50,7 @@
             </div>
             
             <!-- LinkedIn -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3">
                 <a href="https://www.linkedin.com/in/lyndsay-karges" target="_blank" rel="noopener noreferrer" class="contact-card-link">
                     <div class="card h-100 contact-card text-center">
                         <div class="card-body py-4">
@@ -65,7 +65,7 @@
             </div>
             
             <!-- Resume -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-6 col-sm-6 col-lg-3">
                 <a href="/LyndsayKarges-Resume.pdf" target="_blank" class="contact-card-link">
                     <div class="card h-100 contact-card text-center">
                         <div class="card-body py-4">
