--- a/layouts/shortcodes/accomplishments-section.html
+++ b/layouts/shortcodes/accomplishments-section.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
             <!-- Budget Management -->
             <div class="col-12 col-sm-6 col-lg-3">
                 <div class="card h-100 accomplishment-card text-center">
