Reduce job title size in Professional Experience section from h1 to h3
Co-authored-by: Shelley <shelley@exe.dev>

--- a/layouts/shortcodes/experience-list.html
+++ b/layouts/shortcodes/experience-list.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="experience__description d-print-block col-12 col-md-9 mt-3 mt-md-0">
-                    <h1>{{ .Params.jobTitle }}</h1>
+                    <h3 class="experience__job-title">{{ .Params.jobTitle }}</h3>
                     {{ .Content | safeHTML }}
                 </div>
             </div>
